- fixed: overlapping web title on name

--- a/assets/css/indexStyles.css
+++ b/assets/css/indexStyles.css
@@ -456,7 +456,7 @@ button#backToTopBtn {
     transition: background-color 0.2s ease;
 }
 
-
+/* Media Queries */
 @media screen and (max-height: 790px) {
     section {
         margin-top: 200px;
@@ -466,3 +466,9 @@ button#backToTopBtn {
         margin-top: 100px;
     }
 } 
+
+@media only screen and (min-width: 651px) and (max-width: 1460px)  {
+    #webTitle {
+        margin-top: 2.5vh;
+    }
+}
