--- a/assets/css/midResponsive.css
+++ b/assets/css/midResponsive.css
@@ -74,10 +74,6 @@
         margin-left: 8%;
     }
 
-    #webTitle {
-        margin-top: 35px;
-    }
-
 
     /* Work Section */
     #workSection {
